[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "manus_glove"
authors = [{ name = "etaoxing", email = "etaoxing@users.noreply.github.com" }]
description = "Python CFFI wrapper for the ManusSDK"
license = "Apache-2.0"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Natural Language :: English",
]
dynamic = ["version", "readme"]
requires-python = ">=3.10"
dependencies = [
    "cffi",
]

[project.optional-dependencies]
dev = [
    "ipdb",
    "pre-commit",
    "pytest",
    "pytest-xdist",
    "ruff",
    "ty",
    "typos",
]

[tool.setuptools.packages.find]
include = ["manus_glove*"]

[tool.setuptools.dynamic]
version = { file = ["VERSION"] }
readme = { file = ["README.md"], content-type = "text/markdown" }

[tool.ruff]
cache-dir = ".cache/ruff"
line-length = 128
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "I",   # isort
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "NPY", # NumPy-specific rules
    "PLC", # pylint convention
    "PLE", # pylint error
    "PLW", # pylint warning
    "UP",  # pyupgrade
    "RUF", # ruff-specific rules
]
ignore = [
    "RUF012",  # Mutable class attributes should be annotated with `typing.ClassVar`
    "E731",  # Do not assign a lambda expression, use a def
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true

[tool.pytest.ini_options]
python_files = "test_*.py"
testpaths = [
    "manus_glove/_tests",
]
